kubernetes/ingress/nginx/lnmp/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  # https://kubernetes.github.io/ingress-nginx/user-guide/nginx-configuration/annotations/
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    # nginx.ingress.kubernetes.io/secure-backends: "true" # 已废弃
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    # host 302=> host/app
    # nginx.ingress.kubernetes.io/app-root: /app
    # nginx.ingress.kubernetes.io/ssl-passthrough: "true"
  name: lnmp
  namespace: lnmp
  labels:
    app: lnmp
spec:
  ingressClassName: nginx
  # 一个 Ingress 只能使用一个 secret
  tls:
  - hosts:
    - laravel.t.khs1994.com
    - laravel2.t.khs1994.com
    - www.t.khs1994.com
    secretName: lnmp-ingress-nginx-tls
  rules:
  - host: laravel2.t.khs1994.com # must be a DNS name, not an IP address
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 443
  - host: www.t.khs1994.com
    http:
      paths:
      - path: /
        pathType: Prefix
        # path: /test
        # 发送后端路径也是 /test
        backend:
          service:
            name: nginx
            port:
              number: 443
  - host: laravel.t.khs1994.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 443
